@@ -1,4 +1,5 @@
 2009-Aug24      cpo                     Add Matt's BldInfo classes and put it TypeId for the FEE GasDet.
+		weaver			Add missing transitions {Map,Unconfigure,Unmap} into xtcmonserver.
 2009-Aug15	weaver	Tag V00-05-03.  Applied Bozek's detector name changes.
 					Added master EVG fiducial count details.
 2009-Aug12	weaver	Tag V00-05-02.  Tagged for production release.
